# Orison

./: .gitignore  AGENTS.md  BENCHMARKS.md  BENCHMARKS.results.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_REMEDIATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOAL.md  GOVERNANCE.md  MAINTAINERS.md  MEMORY.md  Makefile  ORISON_AGENT_DEVELOPMENT_HANDOFF.md  ORISON_DEMO_APPLICATION_GUIDE.md  ORISON_README_DEVELOPER.md  README.md  REJECTIONS_REPORT.md  RELEASE_NOTES_v0_2_0.md  STABILITY.md  TASKS.md  TESTING-GOALS.md  VALIDATION.md  ori.toml
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
Formula/: ori.rb
crates/ori-cli/: Cargo.toml
crates/ori-cli/src/: main.rs  schema_check.rs
crates/ori-cli/tests/: cli_smoke.rs  schema_validation.rs
crates/ori-docsite/: Cargo.toml
crates/ori-docsite/src/: css.rs  error.rs  lib.rs  main.rs  markdown.rs  navigation.rs  site.rs
crates/ori-docsite/tests/: deterministic_output.rs  fixture_roundtrip.rs  markdown_features.rs  navigation_tree.rs  real_docs_build.rs
crates/ori-pkg/: Cargo.toml
crates/ori-pkg/src/: audit.rs  error.rs  lib.rs  lockfile.rs  manifest.rs  provenance.rs  publish.rs  registry.rs  resolver.rs  sandbox.rs  sbom.rs  toml_lite.rs  version.rs  version_solver.rs
crates/ori-pkg/tests/: audit_capability_diff.rs  capability_bypass.rs  lockfile_deterministic.rs  lockfile_tamper.rs  manifest_errors.rs  manifest_roundtrip.rs  provenance_failure.rs  resolver_cycle.rs  sbom_schema.rs
docs/: ARCHITECTURE_OVERVIEW.md  CI.md  CONTRIBUTING.md  DEMO_WALKTHROUGH.md  GOVERNANCE.md  INTEGRATION_REPORT.md  QUALITY_GATES.md  RELEASE-1.0.md  ROADMAP.md  SECURITY_MODEL.md
examples/: agent_patch.json  bad_null.ori  change_manifest.json  hello.ori
prompts/: agent-system.md  code-review-checklist.md  debugging-playbook.md
schemas/: agent-changed.schema.json  agent-diagnose.schema.json  agent-map.schema.json  agent-symbol-list.schema.json  agent-tests.schema.json  audit-report.schema.json  backend-dispatch-v2.schema.json  backend-dispatch.schema.json  benchmark.schema.json  build-report.schema.json  bundle-report.schema.json  capability-runtime-v2.schema.json  capability-runtime.schema.json  capability.schema.json  capsule.schema.json  change.schema.json  coverage-report.schema.json  design-tokens-report.schema.json  desktop-manifest.schema.json  diagnostic.schema.json  doctor.schema.json  lockfile.schema.json  (+27 more)
(+440 files in other folders)
