[workspace]
members = [
  "crates/ori-compiler",
  "crates/ori-agent",
  "crates/ori-cli",
  "crates/ori-lsp",
  "crates/ori-pkg"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.1"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
