[package]
name = "ori-docsite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "ori-docsite"
path = "src/main.rs"

[[test]]
name = "markdown_features"
path = "tests/markdown_features.rs"

[[test]]
name = "navigation_tree"
path = "tests/navigation_tree.rs"

[[test]]
name = "fixture_roundtrip"
path = "tests/fixture_roundtrip.rs"

[[test]]
name = "deterministic_output"
path = "tests/deterministic_output.rs"

[[test]]
name = "real_docs_build"
path = "tests/real_docs_build.rs"
